[gd_scene load_steps=2 format=3 uid="uid://npoy876g3jby"]

[ext_resource type="Script" uid="uid://lmwexib25msh" path="res://Scripts/title_screen.gd" id="1_klylv"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_klylv")

[node name="PlayButton" type="Button" parent="."]
offset_left = 544.0
offset_top = 396.0
offset_right = 614.0
offset_bottom = 427.0
text = "Play"

[node name="Button2" type="Button" parent="."]
offset_left = 544.0
offset_top = 451.0
offset_right = 614.0
offset_bottom = 482.0
text = "button2"

[node name="Button3" type="Button" parent="."]
offset_left = 542.0
offset_top = 509.0
offset_right = 612.0
offset_bottom = 540.0
text = "button3"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
